--- a/client/src/style/tailwind.css
+++ b/client/src/style/tailwind.css
@@ -2,3 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .ql-container {
+        font-size: 1rem !important;
+        line-height: 1.5rem;
+    }
+}
